home page work started

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
         <!-- Font links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+            rel="stylesheet">
+        <!-- poppins -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap"
+            rel="stylesheet">
         <!-- css links -->
         <link rel="stylesheet" href="./assets/css/style.css">
         <!-- font awesome css -->
@@ -28,58 +36,80 @@
 
     </head>
     <body>
-        <div class="container">
-            <div class="upperbar">
-                <div class="number">
-                    <ul>
-                        <li>
-                            <p><i class="fa fa-phone icons" aria-hidden="true"></i>&nbsp; +92 3030239865</p>
-                        </li>
-                        <li>
-                            <p><i class="fa fa-envelope icons" aria-hidden="true"></i>&nbsp; Netgenius90@gmail.com</p>
-                        </li>
-                    </ul>
-                </div>
-                <!-- email -->
-                <div class="logo"><a href="">NetGenius</a></div>
-                <!-- time -->
-                <div class="time">
-                    <ul>
-                        <li>
-                            <p><i class="fa fa-clock icons" aria-hidden="true"></i> 12pm to 6am</p> 
-                        </li>
-                        <li>
-                            <p><i class="fa fa-globe icons" aria-hidden="true"></i> Country</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <!-- hero banner and navbar -->
+        <div class="banner-container">
             <!-- navbar start -->
-            <nav>
-                <div class="navbar-container">
-                    <div class="brand">NETGENIUS</div>
-                    <!-- navbar -->
-                    <div class="navbar">
-                        <ul>
-                            <li><a href=""><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-                            <li><a href=""><i class="fa fa-file" aria-hidden="true"></i> Projects</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Contact</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Home</a></li>
-                        </ul>
-                    </div>
-                    <!-- search -->
-                    <div class="searchbar">
-                        <input type="text" name="" id="">
-                        <button class="search_btn"><i class="fa fa-search" aria-hidden="true"></i></button>
-                    </div>
+            <nav class="navbar">
+                <div class="brand"><h1>NetGenius</h1></div>
+                <!-- ///brand  -->
+                <div class="links">
+                    <ul>
+                        <li class="page-links"><a href="">Home</a></li>
+                        <li class="page-links"><a href="">Services</a></li>
+                        <li class="page-links"><a href="">Projects</a></li>
+                        <li class="page-links"><a href="">About</a></li>
+                        <li class="page-links"><a href="">Team</a></li>
+                        <li class="page-links"><a href="">Contact</a></li>
+                        <li class="page-links"><a href="">Blog</a></li>
+                        <li class="page-links"><a href="">Exrta Pages</a></li>
+                    </ul>
                 </div>
+                <!-- ///links -->
+                <div class="button">
+                    <ul>
+                        <li class="register-link">
+                            <a href="">Sign in</a>
+                        </li>
+                        <li class="get-started-link">
+                            <a href="">Get Started</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <!-- ///button -->
             </nav>
             <!-- navbar ends -->
+            <!-- hero banner -->
+            <div class="hero-banner">
+                <div class="hero-text">
+                    <h1 >Advance Solution <br> for Business</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, distinctio illo voluptatem expedita voluptates possimus deleniti iure,</p>
+                    <!--input tags  -->
+                    <form action="">
+                        <input type="text" name="subscribe_email" placeholder="Enter your email address">
+                        <button type="submit">Subscribe</button>
+                        <div class="labels">
+                            <ul>
+                                <li>
+                                <p><i class="fa fa-check-circle" aria-hidden="true"></i>&nbsp;14-days Fre Trials.</p>
+                                </li>
+                               <li>
+                                <p><i class="fa fa-check-circle" aria-hidden="true"></i> &nbsp;No credit card required.</p>
+                               </li>
+                            </ul>
+                            
+                        </div>
+                    </form>
+                    
+                </div>
+                <!-- hero image -->
+                <div class="hero-image">
+                    <img src="./assets/images/hero-banner.png" alt="">
+                </div>
+            </div>
+            <!-- bottom tags -->
+            <div class="bottom-tags">
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>                
+            </div>
         </div>
+        <!-- end of hero and navbar -->
     </body>
 </html>
 
