new animation added and changed image for banner

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <link rel="stylesheet" href="./assets/FontAwesome/css/solid.css">
         <link rel="stylesheet" href="./assets/FontAwesome/css/solid.min.css">
         <!-- owl carousel -->
-
-
+        <!-- Aos css animations -->
+        <link rel="stylesheet" href="./assets/css/aos.css">
     </head>
     <body>
         <!-- hero banner and navbar -->
@@ -96,18 +96,19 @@
                 <div class="hero-image">
                     <img src="./assets/images/hero-banner.png" alt="">
                 </div>
-            </div>
-            <!-- bottom tags -->
+                        <!-- bottom tags -->
             <div class="bottom-tags">
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
-                    <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>                
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>
+                <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> <span>Company</span></div>                
+        </div>
             </div>
+    
         </div>
         <!-- end of hero and navbar -->
     </body>
@@ -127,3 +128,9 @@
 <script src="./assets/FontAwesome/js/regular.min.js"></script>
 <script src="./assets/FontAwesome/js/solid.js"></script>
 <script src="./assets/FontAwesome/js/solid.min.js"></script>
+<!-- Aos animation links -->
+<script src="./assets/js/aos.js"></script>
+<!-- aos initilization script -->
+<script>
+    AOS.init();
+</script>
