--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section class="offer-section">
             <div class="offer-container">
                 <div class="offer-text">
-                    <h1 data-aos="fade-up" data-aos-delay="700">Everything we do with Love</h1>
+                    <h1 data-aos="fade-up" data-aos-delay="700">Everything we do it with Love</h1>
                     <div id="p">
                         <p id="p" data-aos="fade-down" data-aos-delay="700">Everything we provide and do with love and in professional having experience and well managed team to give your bussiness a boost .</p>
                     </div>
