--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <li class="page-links"><a  href="">Team</a></li>
                             <li class="page-links"><a  href="">Contact</a></li>
                             <li class="page-links"><a  href="">Blog</a></li>
-                            <li class="page-links"><a  href="">Exrta Pages</a></li>
+                            <li class="page-links"><a  href="">.....</a></li>
                         </ul>
                     </div>
                     <!-- ///links -->
