changes in home page kusloom you have make everything responsive

--- a/index.html
+++ b/index.html
@@ -99,19 +99,9 @@
                         <img src="./assets/images/hero-banner.png" alt="">
                     </div>
                     </div>
-                    <div class="bottom-tags">
-                        <div class="company"><i class="fa-solid fa-building"></i> &nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa-solid fa-boxes-stacked"></i> &nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa-solid fa-truck-ramp-box"></i> &nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa-solid fa-circle-check"></i>&nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa-solid fa-toolbox"></i> &nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa-solid fa-box"></i> &nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa fa-bookmark" aria-hidden="true"></i> &nbsp; <span>Company</span></div>
-                        <div class="company"><i class="fa-solid fa-inbox"></i> &nbsp; <span>Company</span></div>                
-                    </div>
                                 <!-- bttom text -->
                     <div class="bottom-text">
-                        <center><p>Build Your Dream Websites with NetGenius Team.</p></center>
+                        <center><p >Build Your Dream Websites with NetGenius Team.</p></center>
                     </div>
             
                 </div>
@@ -141,7 +131,7 @@
                             <p>Getting Best reviews And love from our client is all we need .</p>
                           </div>
                     <!-- 2 -->
-                    <div class="cards" data-aos="flip-down" data-aos-delay="800">
+                    <div class="cards" data-aos="flip-down" data-aos-delay="600">
                             <h4>90%</h4>
                             <h5>24/7 Support</h5>
                             <p>24/7 hours of customer care support for clients and users .</p>
@@ -150,6 +140,44 @@
                 </div>
             </div>
         </section>
+                <!-- Feature section -->
+                <section class="feature-section">
+
+                        <div class="left-side-data">
+                            <h4  data-aos="fade-down" data-aos-delay="600">Features</h4>
+                            <h3  data-aos="fade-up" data-aos-delay="600">Powerful Solutions For  <br>     your business Needs</h3>
+                            <p  data-aos="fade-right" data-aos-delay="600">Quickly incubate functional channels with multidisciplinary architectures authoritatively fabricate</p>
+                            <!-- label text -->
+                            <div class="label-text-1"  data-aos="flip-down" data-aos-delay="600">
+                                <div class="icon">
+                                    <i class="fa-solid fa-image " id="pixel" ></i> 
+                                </div>
+                                <div class="label-text">
+                                    
+                                    <h5>Pixel Perfect Design</h5>
+                                    <p>progressively foster enterprise-wide systems whereas equily invested web readlines harnes installed.</p>
+                                 </div>
+                            </div>
+                            <!-- second label text -->
+                            <div class="label-text-1"  data-aos="flip-up" data-aos-delay="600">
+                                <div class="icon">
+                                    <i class="fa-solid fa-computer " id="progress"></i> 
+                                </div>
+                                <div class="label-text">
+                                    <h5>Unique & Minimal Design</h5>
+                                    <p>Dramatically administrate progressive matrics without error-free globally simply  standard.</p>
+                                 </div>
+                            </div>
+                            <!-- end of labels -->
+                        </div>
+                        <!-- right side -->
+                        <div class="right-side-data"  data-aos="fade-up" data-aos-delay="600">
+                            <div class="text-data"  data-aos="flip-left" data-aos-delay="600"><i class="fa fa-circle-check" id="checked"></i> Create a free account</div>
+                            <div class="text-data"  data-aos="flip-up" data-aos-delay="600"><i class="fa fa-circle-check" id="checked"></i> Install our tracking pixcels</div>
+                            <div class="text-data"  data-aos="flip-right" data-aos-delay="600"><i class="fa fa-circle-check" id="checked"></i> start tracking your website</div>
+                        </div>
+                </section>
+                <!-- end of feature section -->
     </body>
 </html>
 
