sign up page styling

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -43,7 +43,37 @@
              </div>
              <!-- form section -->
              <div class="form-sign-up">
-                <h1>Hello</h1>
+                <div class="content">
+                    <h1>Create an account</h1>
+                    <p>Get started with your free account today.No credit card needed and no setup fees.</p>
+                    <!-- inputs -->
+                    <div class="inputs">
+                        <div class="input-data">
+                            <label for="name">Name</label>
+                            <input type="text"  name="name" class="form-style" id="name"  placeholder="Enter your Name">
+                            <div id="input-error-name"></div>
+                        </div>
+                        <!-- email -->
+                        <div class="input-data">
+                            <label for="email">Email</label>
+                            <input type="text"  name="email" class="form-style" id="email"  placeholder="Enter your Email address">
+                            <div id="input-error-email"></div>
+                        </div>
+                    </div>
+                    <!-- input second section -->
+                             <label for="name">Company Name</label><br>
+                            <input type="text"  name="company" class="form-style" id="company"  placeholder="Enter your Name">
+                            <div id="input-error-company"></div>
+                            <!-- Password -->
+                            <label for="name">Company Name</label><br>
+                            <input type="text"  name="company" class="form-style" id="company"  placeholder="Enter your Name">
+                            <div id="input-error-company"></div>
+                            <!-- Confirm Password -->
+                            <label for="name">Company Name</label><br>
+                            <input type="text"  name="company" class="form-style" id="company"  placeholder="Enter your Name">
+                            <div id="input-error-company"></div>
+                            <!-- input sction end -->
+                </div>
              </div>
             </div>
         </section>
