changes in signup pages

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -46,7 +46,7 @@
                 <div class="content">
                     <h1>Create an account</h1>
                     <p>Get started with your free account today.No credit card needed and no setup fees.</p>
-                    <form action="" id="register-form">
+                    <form action="/login.html" id="register-form">
                     <!-- inputs -->
                     <div class="inputs">
                         <div class="input-data">
