another section added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-        <!-- css links -->
+        <!-- main css link -->
         <link rel="stylesheet" href="./assets/css/style.css">
+        <!-- Pages css links -->
+        <link rel="stylesheet" href="./assets/css/Home.css">
+        <!-- Mediaquery css-->
+        <link rel="stylesheet" href="./assets/css/Mediaquries/home-mediaquery.css">
         <!-- font awesome css -->
         <link rel="stylesheet" href="./assets/FontAwesome/css/all.css">
         <link rel="stylesheet" href="./assets/FontAwesome/css/all.min.css">
@@ -97,7 +101,7 @@
                         <img src="./assets/images/hero-banner.png" alt="">
                     </div>
                     </div>
-                                <!-- bttom text -->
+                    <!-- bttom text -->
                     <div class="bottom-text">
                         <center><p >Build Your Dream Websites with NetGenius Team.</p></center>
                     </div>
@@ -176,6 +180,35 @@
                         </div>
                 </section>
                 <!-- end of feature section -->
+
+                <!-- Experience section start -->
+                <section class="experience">
+                    <div class="image-section">
+                        <img data-aos="fade-down" data-aos-delay="600" src="./assets/images/hero-banner.png" alt="">
+                    </div>
+                    <!-- section for image ends above -->
+                    <div class="text-section">
+                        <h5 data-aos="flip-up" data-aos-delay="600">EXPERIENCE</h5>
+                        <h4 data-aos="flip-down" data-aos-delay="600">Experience your project with integeration</h4>
+                        <p data-aos="fade-down" data-aos-delay="600">Conveneintly drive stand alone linkage for process-centric content enthuiastically administrate robust collaborative</p>
+                        <div class="card-section">
+                            <!-- User section -->
+                            <div class="card">
+                                <h3 data-aos="flip-right" data-aos-delay="600" ><i class="fa fa-user"></i></h3>
+                                <h5 data-aos="flip-left" data-aos-delay="600">Customer analysis</h5>
+                                <p data-aos="fade-down" data-aos-delay="600">Objectively exceptional via customized capital expertise</p>
+                            </div>
+                            <!-- watch section -->
+                            <div class="card">
+                                <h3 data-aos="flip-left" data-aos-delay="600"><i class="fa fa-clock" ></i></h3>
+                                <h5 data-aos="flip-up" data-aos-delay="600">Real time metrics</h5>
+                                <p data-aos="flip-down" data-aos-delay="600">Interactively integrate extensible users resource</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- End of Experience -->
+
     </body>
 </html>
 
