new changes for netgenius home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NetGenius</title>
         <!-- page icon -->
-        <link rel="shortcut icon" href="./assets/images/main-logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/images/main-logo.png"  type="image/x-icon">
         <!-- Font links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,31 +39,31 @@
     <body>
         <!-- hero banner and navbar -->
         <section>
-            <div class="banner-container">
+            <div class="banner-container" >
                 <!-- navbar start -->
                 <nav class="navbar" id="nav-bar-container">
                     <div class="brand" id="brand"><img src="./assets/images/main-logo.png" alt="">&nbsp; <a href="">NetGenius</a></div>
                     <!-- ///brand  -->
                     <div class="links" id="nav-bar-links">
                         <ul>
-                            <li class="close-button"><a href="" id="close-button"><i class="fa-solid fa-xmark"></i></a></li>
-                            <li class="page-links" ><a  href="">Home</a></li>
-                            <li class="page-links"><a  href="">Services</a></li>
-                            <li class="page-links"><a  href="">Projects</a></li>
-                            <li class="page-links"><a  href="">About</a></li>
-                            <li class="page-links"><a  href="">Team</a></li>
-                            <li class="page-links"><a  href="">Contact</a></li>
-                            <li class="page-links"><a  href="">Blog</a></li>
+                            <li class="close-button"><a href="" id="close-button"><i class="fa-solid fa-xmark icons"></i></a></li>
+                            <li class="page-links" ><a  href=""><i class="fa-solid fa-house-laptop icons"></i>&nbsp; Home</a></li>
+                            <li class="page-links"><a  href=""><i class="fa-solid fa-computer icons"></i>&nbsp; Services</a></li>
+                            <li class="page-links"><a  href=""><i class="fa-solid fa-diagram-project icons"></i>&nbsp; Projects</a></li>
+                            <li class="page-links"><a  href=""><i class="fa-solid fa-circle-info icons"></i>&nbsp; About</a></li>
+                            <li class="page-links"><a  href=""><i class="fa-brands fa-teamspeak icons"></i>&nbsp; Team</a></li>
+                            <li class="page-links"><a  href=""><i class="fa-solid fa-message icons"></i>&nbsp; Contact</a></li>
+                            <li class="page-links"><a  href=""><i class="fa-solid fa-blog icons"></i>&nbsp; Blog</a></li>
                         </ul>
                     </div>
                     <!-- ///links -->
                     <div class="button">
                         <ul>
                             <li class="register-link" id="sign">
-                                <a href="" >Sign in</a>
+                                <a href="" ><i class="fa-solid fa-user-gear icons"></i>&nbsp; Log in</a>&nbsp; &nbsp;<b class="slash">/</b>&nbsp; &nbsp;<a href="" ><i class="fa-solid fa-user-plus icons"></i> Register</a>
                             </li>
                             <li class="get-started-link">
-                                <a href="">Get Started</a>
+                                <a href="">Get Started &nbsp;<i class="fa-solid fa-right-to-bracket"></i></a>
                             </li>
                             <li class="get-started-link">
                                 <a href="" id="toggle-button" class="toggle-button"><i class="fa-solid fa-sliders"></i></a>
@@ -95,11 +95,6 @@
                                 
                             </div>
                         </form>          
-                    </div>
-                    <!-- hero image -->
-                    <div class="hero-image">
-                        <img src="./assets/images/hero-banner.png" alt="">
-                    </div>
                     </div>
                     <!-- bttom text -->
                     <div class="bottom-text">
@@ -208,7 +203,106 @@
                     </div>
                 </section>
                 <!-- End of Experience -->
+                <!-- Services section -->
+                <section class="services-section">
+                    <div class="text-section">
+                        <h1 data-aos="fade-left" data-aos-delay="500">Best Services grow your <br> business value<h1>
+                        <p data-aos="zoom-right" data-aos-delay="500">Globally actualize cost  effective resource maximizing leadership skills</p>
+                    </div>
+                    <div class="container-sections">
+                        <div class="left-container" data-aos="flip-left" data-aos-delay="500">
+                            <!-- LOGO  -->
+                            <h3><i class="fa-solid fa-chart-simple icons"></i></h3>
+                            <!-- headings -->
+                            <div class="headings">
+                                <h1>Advance analytics</h1>
+                                <p>Synergistically pursue accurate initiatives <br>  without economically sound imperatives.</p><br>            
+                                <p>Professionally architect unique process improvements via optional. </p>        
+                            </div>
+                            <!-- Includes -->
+                            <div class="includes">
+                                <h1>Includes with...</h1>
+                                <ul>
+                                    <li>
+                                        <h4><div class="fa fa-check icon"></div> &nbsp;&nbsp;  High Converting</h4>
+                                    </li>
+                                    <!-- /// -->
+                                    <li>
+                                        <h4><div class="fa fa-check icon"></div>&nbsp;&nbsp;&nbsp; personal branding</h4>
 
+                                    </li>
+                                    <!-- /// -->
+                                    <li>
+                                        <h4><div class="fa fa-check  icon"></div>&nbsp;&nbsp;&nbsp;   Modernized prospecting</h4>
+                                    </li>
+                                    <!-- /// -->
+                                    <li>
+                                        <h4><div class="fa fa-check  icon"></div>&nbsp;&nbsp;&nbsp;   Clean and modern</h4>
+
+                                    </li>
+                                    <!-- /// -->
+                                    <li>
+                                        <h4><div class="fa fa-check  icon"></div>&nbsp;&nbsp;&nbsp;   Showcasing success</h4>
+
+                                    </li>
+                                    <!-- /// -->
+                                    <li>
+                                        <h4><div class="fa fa-check  icon"></div>&nbsp;&nbsp;&nbsp;   Bootstrap latest version</h4>
+
+                                    </li>
+                                    <!-- /// -->
+                                </ul>
+                                <div class="view-details"><a href="">View Details&nbsp;<i class="fa-solid fa-right-to-bracket"></i></a></div>
+                            </div>
+                            
+                        </div>
+                        <!-- right container -->
+                        <div class="right-container">
+                            <div class="small-containers"  data-aos="flip-left" data-aos-delay="500">
+                                <h3><i class="fa-solid fa-file file-icon"></i></h3>
+                                <!-- headings -->
+                                <div class="headings">
+                                    <h1>Automated Reports</h1>
+                                    <p>Synergistically pursue accurate initiatives <br>  without economically sound imperatives.</p><br>            
+                                    <div class="view-details"><a href="">View Details&nbsp;<i class="fa-solid fa-right-to-bracket"></i></a></div>
+                                </div>
+                            </div>
+                            <!-- //// -->
+                            <div class="small-containers" data-aos="flip-down" data-aos-delay="500">
+                                <h3><i class="fa-solid fa-users user-icon"></i></h3>
+                            <!-- headings -->
+                            <div class="headings">
+                                <h1>User Journey Flow</h1>
+                                <p>Quickly productive prospective value<br> before collaborative benefits</p><br>            
+                                <div class="view-details"><a href="">View Details&nbsp;<i class="fa-solid fa-right-to-bracket"></i></a></div>
+                            </div>
+                            </div>
+                            <!-- ///// -->
+                            <div class="small-containers" data-aos="flip-right" data-aos-delay="500">
+                                <h3><i class="fa-solid fa-hands-bound hand-icon"></i></h3>
+                            <!-- headings -->
+                            <div class="headings">
+                                <h1>Compare A/B Testing</h1>
+                                <p>Credibly disintermediate functional  <br> processes for team driven action</p><br>            
+                                <div class="view-details"><a href="">View Details&nbsp;<i class="fa-solid fa-right-to-bracket"></i></a></div>
+                            </div>
+                            </div>
+                            <!-- ///// -->
+                            <div class="small-containers" data-aos="flip-up" data-aos-delay="500">
+                                <h3><i class="fa-solid fa-gears gear-icon"></i></h3>
+                            <!-- headings -->
+                            <div class="headings">
+                                <h1>Easy Customizations</h1>
+                                <p>Dynamically develop ubiquitous <br>  opportunities whereas relationships</p><br>            
+                                <div class="view-details"><a href="">View Details&nbsp;<i class="fa-solid fa-right-to-bracket"></i></a></div>
+                            </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                </section>
     </body>
 </html>
 
